[package]
name = "advent_of_code"
version = "0.11.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]
cached = "0.54.0"

# Template dependencies
chrono = { version = "0.4.38", optional = true }
dashmap = { version = "6.1.0", features = ["rayon"] }
dhat = { version = "0.3.3", optional = true }
hashbrown = { version = "0.15.2", features = ["rayon"] }
itertools = "0.13.0"
linked_hash_set = "0.1.5"
md5 = "0.7.0"
nom = "7.1.3"
once_cell = "1.20.2"
pathfinding = "4.12.0"
pico-args = "0.5.0"
rayon = "1.10.0"
serde_json = "1.0.134"
tinyjson = "2.5.1"
unescaper = "0.1.5"

# Solution dependencies
